First steps for fouth hw
