# promo-service/internal/server/server.go
@@ -12,6 +12,7 @@ import (
 	"google.golang.org/grpc/codes"
 	"google.golang.org/grpc/metadata"
 	"google.golang.org/grpc/status"
+	"google.golang.org/protobuf/types/known/timestamppb"
 )
 
 type Server struct {
@@ -157,5 +158,62 @@ func (s *Server) ListPromos(ctx context.Context, req *promo.ListPromosRequest) (
 	return &promo.ListPromosResponse{
 		Promos: protoPromos,
 		Total:  int32(total),
+	}, nil
+}
+
+func (s *Server) AddComment(ctx context.Context, req *promo.AddCommentRequest) (*promo.AddCommentResponse, error) {
+	// Получаем метаданные из контекста
+	md, ok := metadata.FromIncomingContext(ctx)
+	if !ok {
+		return nil, status.Error(codes.Unauthenticated, "metadata is not provided")
+	}
+
+	// Получаем информацию о пользователе из метаданных
+	userIDs := md.Get("user_id")
+	if len(userIDs) == 0 {
+		return nil, status.Error(codes.Unauthenticated, "user_id is not provided")
+	}
+	userID := userIDs[0]
+
+	comment, err := s.service.AddComment(ctx, req.PromoId, userID, req.CommentText)
+	if err != nil {
+		return nil, status.Error(codes.Internal, err.Error())
+	}
+
+	return &promo.AddCommentResponse{
+		Comment: &promo.PromoComment{
+			Id:          comment.ID.String(),
+			PromoId:     comment.PromoID.String(),
+			ClientId:    comment.ClientID.String(),
+			CommentText: comment.CommentText,
+			CreatedAt:   timestamppb.New(comment.CreatedAt),
+			UpdatedAt:   timestamppb.New(comment.UpdatedAt),
+		},
+	}, nil
+}
+
+func (s *Server) GetComments(ctx context.Context, req *promo.GetCommentsRequest) (*promo.GetCommentsResponse, error) {
+	comments, total, err := s.service.GetComments(ctx, req.PromoId, req.Page, req.PageSize)
+	if err != nil {
+		return nil, status.Error(codes.Internal, err.Error())
+	}
+
+	protoComments := make([]*promo.PromoComment, len(comments))
+	for i, c := range comments {
+		protoComments[i] = &promo.PromoComment{
+			Id:          c.ID.String(),
+			PromoId:     c.PromoID.String(),
+			ClientId:    c.ClientID.String(),
+			CommentText: c.CommentText,
+			CreatedAt:   timestamppb.New(c.CreatedAt),
+			UpdatedAt:   timestamppb.New(c.UpdatedAt),
+		}
+	}
+
+	return &promo.GetCommentsResponse{
+		Comments: protoComments,
+		Total:    total,
+		Page:     req.Page,
+		PageSize: req.PageSize,
 	}, nil
 }
